Fix suggestions, html validator and css align

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ h2{
   color: #FF7582;
   font-size: 1.3rem;
   margin-top: 0;
+
 }
 
 main {
@@ -45,14 +46,14 @@ header > p {
 
 main > section{
   grid-row: 2;
-  margin-left: 2rem;
+  /* margin-left: 2rem; */
   margin-right: 2rem;
 
 }
 
 section:nth-child(2) {
   grid-row: 3;
-  margin-left: 2rem;
+  /* margin-left: 2rem; */
   margin-right: 2rem;
 }
 
@@ -76,14 +77,19 @@ section:last-child > p:last-child{
     background-color: lightslategray;
     color: #FFffff;
     padding: 0.5rem;
-    text-align: center;
+    text-align: left;
     font-size: 0.8rem;
     font-style: normal;
     margin-top:0.5rem;
 }
 
 img {
-  border: 1px #000000 solid;
+  /* border: 1px #000000 solid; */
+  /* I used this instead of "border" because I want the border inside the image, so it will be aligned to the pink square in the header */
+  outline: 1px #000000 solid;
+  outline-offset: -1px;
+  display: block;
+
   display: block;
 }
 
